# Tuckr-ui

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
assets/: help.txt
src/: app.rs  cmd.rs  filepicker.rs  groups.rs  lib.rs  main.rs
