[package]
name = "tuckr-ui"
version = "1.0.0"
authors = ["TimTheBig"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tuckr = { git = "https://github.com/TimTheBig/Tuckr.git" }
thiserror = "1"

egui = "0.28"
egui_extras = { version = "0.28", features = ["svg", "syntect"] }
eframe = { version = "0.28", default-features = false, features = ["accesskit", "default_fonts", "persistence", "wayland", "wgpu"] }
rfd = { version = "0.14", features = ["tokio", "xdg-portal"], default-features = false }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui-multiselect = { version = "0.2.0", path = "src/multiselect" }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
