[package]
name = "tuckr-ui"
version = "1.0.0"
authors = ["TimTheBig"]
edition = "2021"
description = "A ui for Tuckr a stow like tool for dotfile management"
license = "GPL-3.0"

[package.metadata.bundle]
identifier = "org.timthebig.tuckrui"
icon = ["assets/256x256.png", "assets/512x512.png", "assets/512x512@2x.png", "assets/192x192.png"]
copyright = "Copyright (c) TimTheBig 2024. All rights reserved."
category = "Utility"
linux_use_terminal = false

[package.metadata.deb]
copyright = "Copyright (c) TimTheBig 2024. All rights reserved."
section = "Utility"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tuckr = { git = "https://github.com/TimTheBig/Tuckr.git" }
thiserror = "1"

egui = "0.28"
egui_extras = { version = "0.28", features = ["svg", "syntect"] }
eframe = { version = "0.28", default-features = false, features = ["accesskit", "default_fonts", "persistence", "wayland", "wgpu"] }
rfd = { version = "0.14", features = ["tokio", "xdg-portal"], default-features = false }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui-multiselect = { version = "0.2.0", git = "https://github.com/TimTheBig/egui-multiselect.git" }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
opt-level = 3
